--- a/Contributing.rdoc
+++ b/Contributing.rdoc
@@ -1,13 +1,12 @@
 == Contributing
 
-I value any contribution to MIME::Types you can provide: a bug report, a feature
+I value any contribution to mime-types you can provide: a bug report, a feature
 request, or code contributions.
 
-Code contributions to MIME::Types are especially <del>welcome</del>encouraged.
-Because MIME::Types is a complex codebase, there are a few guidelines:
+As mime-types is a complex codebase, there are a few guidelines:
 
-* Changes (aside from new MIME types) <strong>will not</strong> be accepted
-  without tests. The test suite is written with MiniTest.
+* Changes (aside from new MIME types) *will* *not* be accepted
+  without tests. The test suite is written with Minitest.
 * Match my coding style.
 * Use a thoughtfully-named topic branch that contains your change. Rebase your
   commits into logical chunks as necessary.
@@ -15,16 +14,16 @@ Because MIME::Types is a complex codebase, there are a few guidelines:
 * Do not change the version number; when your patch is accepted and a release
   is made, the version will be updated at that point.
 * Submit a GitHub pull request with your changes.
-* New features require new documentation.
+* New behaviours require new or updated documentation.
 
 === Test Dependencies
 
 To run the test suite, you will need to install the development dependencies
-for MIME::Types. If you have Bundler, you can accomplish this easily:
+for mime-types. If you have Bundler, you can accomplish this easily:
 
     $ bundle install
 
-MIME::Types uses Ryan Davis’s excellent {Hoe}[https://github.com/seattlerb/hoe]
+mime-types uses Ryan Davis’s excellent {Hoe}[https://github.com/seattlerb/hoe]
 to manage the release process, and it adds a number of rake tasks. You will
 mostly be interested in:
 
@@ -42,20 +41,20 @@ will do.
 Here's the most direct way to get your work merged into the project:
 
 * Fork the project.
-* Clone down your fork (+git clone git://github.com/<username>/mime-types.git+).
-* Create a topic branch to contain your change (+git checkout -b my\_awesome\_feature+).
+* Clone down your fork (<tt>git clone git://github.com/<username>/mime-types.git</tt>).
+* Create a topic branch to contain your change (<tt>git checkout -b my\_awesome\_feature</tt>).
 * Hack away, add tests. Not necessarily in that order.
-* Make sure everything still passes by running `rake`.
+* Make sure everything still passes by running +rake+.
 * If necessary, rebase your commits into logical chunks, without errors.
-* Push the branch up (+git push origin my\_awesome\_feature+).
+* Push the branch up (<tt>git push origin my\_awesome\_feature</tt>).
 * Create a pull request against halostatue/mime-types and describe what your
   change does and the why you think it should be merged.
 
 === Contributors
 
-* Austin Ziegler created MIME::Types.
+* Austin Ziegler created mime-types.
 
-Thanks to everyone else who has contributed to MIME::Types:
+Thanks to everyone else who has contributed to mime-types:
 
 * Andre Pankratz
 * Mauricio Linhares
