--- a/Licence.rdoc
+++ b/Licence.rdoc
@@ -13,7 +13,7 @@ licensing terms.
 
 === MIT License
 
-this software and associated documentation files (the "Software"), to deal in
+This software and associated documentation files (the "Software"), to deal in
 the Software without restriction, including without limitation the rights to
 use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
 of the Software, and to permit persons to whom the Software is furnished to do
