--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,10 @@
+== 1.25.1 / 201-11-24
+
+* Bugs:
+  * Fix an issue with priority comparison in the 1.x release series. Found by
+    sdbondi. This issue does not exist in the 2.x release series.
+    https://github.com/halostatue/mime-types/issues/47
+
 == 1.25 / 2013-08-30
 
 * New Features:
