Fix License typos
Signed-off-by: David Celis <me@davidcel.is>

--- a/License.rdoc
+++ b/License.rdoc
@@ -1,4 +1,4 @@
-== Licence
+== License
 
 This software is available under three licenses: the GNU GPL version 2 (or at
 your option, a later version), the Perl Artistic license, or the MIT license.
