Integrate Canadian and American licen[cs]e
I’m Canadian and spell “licence” the Canadian way, thus the document
refers to “licence” and “licences”. However, the licences that are used
are properly titled using the American spelling “license”. Just as the
Toronto Maple Leafs play in the “Air Canada Centre” and the Buffalo
Sabres play in the “First Niagara Center”, it is correct to refer to the
“MIT License” with the American spelling.

To complicate things further, the document permitting the bearer to
drive is called a “licence” (noun). The process by which one gets that
document is “licensing” (verb).

This commit fixes places where I had mixed the spellings to standardize
the non-titled version on the Canadian spelling and the titled version
as appropriate to the licence in question.

Thanks to @davidcelis for bringing this up in PR #54.

--- a/Licence.rdoc
+++ b/Licence.rdoc
@@ -1,12 +1,12 @@
 == Licence
 
-This software is available under three licenses: the GNU GPL version 2 (or at
-your option, a later version), the Perl Artistic license, or the MIT license.
-Note that my preference for licensing is the MIT license, but the original Perl
-MIME::Types was dually originally licensed with the Perl Artistic and the GNU
-GPL ("the same terms as Perl itself") and given that the Ruby implementation
-hewed pretty closely to the Perl version, I must maintain the additional
-licensing terms.
+This software is available under three licences: the GNU GPL version 2 (or at
+your option, a later version), the Perl Artistic License, or the MIT License.
+Note that my preference for licensing is the MIT License, but the original Perl
+MIME::Types was dually originally licensed with the Perl Artistic Licence and
+the GNU GPL ("the same terms as Perl itself") and given that the Ruby
+implementation hewed pretty closely to the Perl version, I must maintain the
+additional licensing terms.
 
 * Copyright 2003–2013 Austin Ziegler.
 * Adapted from MIME::Types (Perl) by Mark Overmeer.
