IANA registry update 20140522

--- a/History-Types.rdoc
+++ b/History-Types.rdoc
@@ -12,7 +12,9 @@
     application/alto-endpointprop\+json,
     application/alto-endpointpropparams\+json, application/alto-error\+json,
     application/alto-networkmap\+json, application/alto-networkmapfilter\+json,
-    application/calendar\+json, application/vnd.ims.lis.v2.result\+json,
+    application/calendar\+json, application/vnd.debian.binary-package,
+    application/vnd.geo\+json,
+    application/vnd.ims.lis.v2.result\+json,
     application/vnd.ims.lti.v2.toolconsumerprofile\+json,
     application/vnd.ims.lti.v2.toolproxy\+json,
     application/vnd.ims.lti.v2.toolproxy.id\+json,
