--- a/Licence.rdoc
+++ b/Licence.rdoc
@@ -8,12 +8,13 @@ the GNU GPL ("the same terms as Perl itself") and given that the Ruby
 implementation hewed pretty closely to the Perl version, I must maintain the
 additional licensing terms.
 
-* Copyright 2003–2013 Austin Ziegler.
+* Copyright 2003–2014 Austin Ziegler.
 * Adapted from MIME::Types (Perl) by Mark Overmeer.
 
 === MIT License
 
-This software and associated documentation files (the "Software"), to deal in
+Permission is hereby granted, free of charge, to any person obtaining a copy of
+this software and associated documentation files (the "Software"), to deal in
 the Software without restriction, including without limitation the rights to
 use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
 of the Software, and to permit persons to whom the Software is furnished to do
