--- a/History-Types.rdoc
+++ b/History-Types.rdoc
@@ -1,5 +1,11 @@
 = MIME Types Changes by Version
 
+== 2.4 / 2014-10-DD
+
+* Changed the sort order of many of the extensions to restore behaviour
+  from mime-types 1.25.1.
+* Updated the IANA media registry entries as of release date.
+
 == 2.3 / 2014-05-23
 
 * Updated the IANA media registry entries as of release date.
