--- a/History-Types.rdoc
+++ b/History-Types.rdoc
@@ -4,6 +4,7 @@
 
 * Changed the sort order of many of the extensions to restore behaviour
   from mime-types 1.25.1.
+* Added `friendly` MIME::Type descriptions.
 * Updated the IANA media registry entries as of release date.
 
 == 2.3 / 2014-05-23
